Fixed width issue on smaller resolutions

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: auto;
+  width: 100%;
   background-color: #4cbfb5;
 }
 
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   height: auto;
+  width: 100%;
   background-color: #518ac4;
 }
 
@@ -24,6 +25,7 @@
   align-items: center;
   background-color: #546ac7;
   height: 100px;
+  width: 100%;
 }
 
 #contact a {
